2000-07-13  Peter Williams  <peterw@curious-george.helixcode.com>

	* configure.in (end): Bigass warnings for camel-async branch
	(remove them later).

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* Version 0.2.

	* configure.in: Reverse the GtkHTML check.

2000-07-10  Jeffrey Stedfast <fejj@helixcode.com>

	* configure.in: Updated to check for required GtkHTML and
	gnome-print

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Remove the conduits stuff for now.  They depend on
	CVS gnome-pilot, and this is not good for the release.

2000-07-10  Dan Winship  <danw@helixcode.com>

	* README: updates

2000-07-10  Seth Alves  <alves@hungry.com>

	* configure.in: added makefiles for calendar conduits

2000-07-10  Dan Winship  <danw@helixcode.com>

	* configure.in: Add a check for Bonobo 0.15 vs Bonobo post-0.15

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Don't draw quite as large a "flat_box".
	If draw_borders is TRUE, cause the cursor to change even if not
	editing.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-entry.c: Removed some border padding and set
	the "draw_borders" argument of the contained GtkText.

	* widgets/e-text/e-text.c, widget/e-text/e-text.h: Added a
	"draw_borders" argument which, if set, makes the EText look more
	like a GtkEntry.

2000-07-09  Tuomas Kuosmanen  <tigert@gimp.org>

	* art/evolution-contacts.png: updated so it has better contrast
	against the background.

	* art/evolution-contacts-small.png: Fits the style of the new contacts
	icon, this is a sigle card.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text-model.c (e_text_model_real_get_text):
	Return "" instead of NULL.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* art/Makefile.am: Fixed EXTRA_DIST for make distcheck.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>
